fix(modal): show elements that overflow the modal content
Modal shows over the modal itself popup  elements like calendar and dropdown list.

--- a/src/styles/components/uniDatepicker/__uniDatepicker.sass
+++ b/src/styles/components/uniDatepicker/__uniDatepicker.sass
@@ -13,7 +13,7 @@
 
     uni-calendar
         position: absolute
-        margin-top: 1.68rem
+        margin-top: 2rem
 
         z-index: map-get($zindex, toolbar)
         background: $uni-color-negative
@@ -30,7 +30,7 @@
             color: $uni-color-negative
             height: 2.5rem
             line-height: 2.5rem
-
+            min-width: 16rem
             .prev, .next
                 position: absolute
                 cursor: pointer
